--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Koulen', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
     display: flex;
     flex-direction: column;
