--- a/style.css
+++ b/style.css
@@ -1,21 +1,107 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
+
+:root {
+    --field-input-text-color : #fff;
+    --light-color: lightcoral;
+}
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-
+    background: crimson;
+    color: var(--field-input-text-color);
+    font-family: 'Muli', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center ;
     justify-content: center;
-
     height: 100vh;
-
     overflow: hidden;
-
     margin: 0;
+}
 
+.container {
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 20px 40px;
+    border-radius: 5px;
+}
+
+.container h1 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.container a {
+    text-decoration: none;
+    color: var(--light-color);
+}
+
+.form-control {
+    position: relative;
+    margin: 20px 0px 40px;
+    width: 300px;
+}
+
+.form-control input {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 2px var(--field-input-text-color) solid;
+    display: block;
+    width: 100%;
+    padding: 15px 0;
+    font-size: 18px;
+    color: var(--field-input-text-color);
+}
+
+.form-control input:focus,
+.form-control input:valid {
+    outline: 0;
+}
+
+
+.form-control label {
+    position: absolute;
+    top: 15px;
+    left: 0;
+}
+
+.form-control label span{
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+    transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.form-control input:focus + label span,
+.form-control input:valid + label span{
+    color: lightcoral;
+    transform: translateY(-30px);
+}
+
+
+.btn {
+    background-color: var(--light-color);
+    color: var(--field-input-text-color);
+    font-family: inherit;
+    font-size: 16px;
+    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+    padding: 15px;
+    border: 0;
+    border-radius: 5px;
+}
+
+.btn:focus {
+    outline: 0;
+}
+
+.btn:active {
+    transform: scale(0.98);
+}
+
+.text {
+    margin-top: 30px;
 }
